<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cms_检品</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">B品检品登录</string>
    <string name="date">日期：</string>
    <string name="gongchang">工厂：</string>
    <string name="pinfan">品番：</string>
    <string name="lvli">履历</string>
    <string name="add">登录</string>
    <string name="back">返回</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_lvli">LvliActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_one">OneActivity</string>
    <string name="title_activity_two">TwoActivity</string>
    <string name="title_activity_three">ThreeActivity</string>
    <string name="title_activity_four">FourActivity</string>
    <string name="qianbiao">前.表</string>
    <string name="qianli">前.里</string>
    <string name="houbiao">后.表</string>
    <string name="houli">后.里</string>
    <string name="jisnsuo">B品履历结果</string>
    <string name="title_activity_add_b">AddBActivity</string>
    <string name="title_activity_add2">Add2Activity</string>
    <string name="title_activity_add_pf">AddPfActivity</string>

</resources>
