<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddBActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="@dimen/str_name_size" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_back"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/button13"
            android:layout_width="286dp"
            android:layout_height="82dp"
            android:text="良品"
            android:textSize="36dp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:text="不良品"
            android:textSize="36dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="531dp"
        android:layout_above="@+id/linearLayout1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="504dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rqb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/qianbiao"
                android:textSize="36dp" />

            <RadioButton
                android:id="@+id/rql"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qianli"
                android:textSize="36dp" />

            <RadioButton
                android:id="@+id/rhb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/houbiao"
                android:textSize="36dp" />

            <RadioButton
                android:id="@+id/rhl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/houli"
                android:textSize="36dp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageV"
            android:layout_width="538dp"
            android:layout_height="match_parent"
            android:src="@drawable/images" />

    </LinearLayout>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginBottom="24dp"
        android:text="@string/back"
        android:textSize="46dp" />

</RelativeLayout>