<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="@dimen/str_name_size" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="26dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="133dp"
                android:contentDescription="46dp"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="46dp" />

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="445dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:textSize="46dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                android:text="@string/gongchang"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="46dp" />

            <EditText
                android:id="@+id/edit_gongchang"
                android:layout_width="448dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" 
                android:textSize="46dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="147dp"
                android:text="@string/pinfan"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="46dp" 
                />

             <EditText
                 android:id="@+id/edit_pinfan"
                 android:layout_width="448dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="text"
                 android:textSize="46dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/but_lvli"
                android:layout_width="wrap_content"
                android:layout_height="97dp"
                android:layout_weight="1.00"
                android:text="@string/lvli" 
                android:textSize="46dp"/>

            <Button
                android:id="@+id/but_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.86"
                android:text="@string/add" 
                android:textSize="46dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1" >

        <Button
            android:id="@+id/id2_add"
            android:layout_width="273dp"
            android:layout_height="81dp"
            android:layout_marginTop="42dp"
            android:text="商品登录" 
            android:textSize="46dp"/>
    </LinearLayout>

</RelativeLayout>